Fix mobile timeline: move tl-r2-right label to 62% to prevent overlap

--- a/style.css
+++ b/style.css
@@ -547,6 +547,6 @@ label {
     .tl-r1-left  { left: 5%; }
     .tl-r1-right { left: 48%; }
     .tl-r2-left  { left: 24%; }
-    .tl-r2-right { left: 52%; }
+    .tl-r2-right { left: 62%; }
     
 }
